fix(form): make sure table controls are always visible

--- a/packages/form/app/styles/@projectcaluma/ember-form.scss
+++ b/packages/form/app/styles/@projectcaluma/ember-form.scss
@@ -5,6 +5,11 @@
 
 @import "../uikit-overwrites";
 
+.table-controls > .uk-icon {
+  min-height: 20px;
+  min-width: 20px;
+}
+
 .cf-checkbox_label {
   display: block;
   position: relative;
